--- a/simple-counter/index.html
+++ b/simple-counter/index.html
@@ -5,10 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Counter</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="number">
+        0
+    </div>
+    <div class="toolbar">
+        <button class="toolbar__minus">Убавить</button>
+        <button class="toolbar__reset">Сбросить</button>
+        <button class="toolbar__plus">Прибавить</button>
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
