--- a/review-carousel/index.html
+++ b/review-carousel/index.html
@@ -12,7 +12,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <div class="reviews">
+        <div class="reviews__title">
+            Отзывы клиентов
+        </div>
+        <div class="reviews__box">
+            <div class="reviews__box-item">
+                <div class="reviews__box-item-img"></div>
+                <div class="reviews__box-item-title"></div>
+                <div class="reviews__box-item-special"></div>
+                <div class="reviews__box-item-opinion"></div>
+            </div>
+            <div class="reviews__box-navigation">
+                <button class="reviews__box-navigation-right">Предыдущий</button>
+                <button class="reviews__box-navigation-left">Следующий</button>
+            </div>
+        </div>
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
